--- a/css/styles.css
+++ b/css/styles.css
@@ -108,11 +108,11 @@ img {
 }
 
 .menu {
-  column-gap: 40px;
+  gap: 40px;
 }
 
 .contact-list {
-  column-gap: 40px;
+  gap: 40px;
 }
 
 .page-logo {
@@ -188,6 +188,7 @@ img {
 .order-btn {
   display: block;
   border: none;
+  min-width: 169px;
   border-radius: 4px;
   padding: 16px 32px;
   margin: 0 auto;
@@ -250,7 +251,7 @@ img {
 
 .team-list-content {
   text-align: center;
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .team-list-title {
@@ -321,7 +322,7 @@ img {
 }
 
 .logo-footer {
-  display: block;
+  display: inline-block;
   margin-bottom: 16px;
 }
 /* === /FOOTER STYLES === */
