--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ img {
 /* === HEADER STYLES === */
 .page-header {
   border-bottom: 1px solid var(--cornflower);
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container,
@@ -135,12 +136,34 @@ img {
 }
 
 .menu-link {
+  position: relative;
   display: block;
   padding: 24px 0;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--ocean);
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link:hover::after, 
+.menu-link:focus::after,
+.menu-link.active-link::after {
+  opacity: 1;
 }
 
 .contact-address {
@@ -154,12 +177,14 @@ img {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
 .menu-link:focus,
 .contact-list-link:hover,
-.contact-list-link:focus {
+.contact-list-link:focus,
+.menu-link.active-link {
   color: var(--ocean);
 }
 
@@ -167,9 +192,14 @@ img {
 
 /* === HERO STYLES=== */
 .hero-section {
-  background-color: var(--navy-blue);
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: var(--grey);
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(var(--grey), var(--grey)),
+  url('../images/hero/hero-bg.jpg');
+  background-size: cover;
 }
 
 .main-title {
@@ -198,6 +228,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--white);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-btn:hover,
@@ -216,6 +247,17 @@ img {
   width: calc((100% - 3*24px) / 4);
   background-color: var(--white);
 }
+
+.icon-wrapper {
+  display: flex;
+  justify-content: center;
+  border: 1px solid var(--light-slate);
+  border-radius: 4px;
+  background-color: var(--cloud);
+  padding: 24px 0;
+  margin-bottom: 8px;
+}
+
 
 .features-list-title {
   font-weight: 500;
@@ -266,6 +308,29 @@ img {
 .team-list-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+
+.social-list {
+  display: inline-flex;
+  gap: 24px;
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--iris);
+  fill: var(--cloud);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link:hover,
+.social-list-link:hover {
+  background-color: var(--ocean);
 }
 /* === /TEAM STYLES === */
 
@@ -279,6 +344,36 @@ img {
 .portfolio-list-item {
   width: calc((100% - 2*24px) / 3);
   background-color: var(--white);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.prtfolio-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;  
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud);
+  background-color: var(--iris);
+  padding: 40px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+  cursor: pointer;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  
+  .portfolio-overlay {
+    transform: translateY(0);
+  }
 }
 
 .portfolio-list-content {
@@ -311,6 +406,14 @@ img {
   padding-bottom: 100px;
 }
 
+.footer-container {
+  display: flex;
+}
+
+.footer-left-content {
+  margin-right: 120px;
+}
+
 .footer-accent-color {
   color: var(--cloud);
 }
@@ -324,5 +427,23 @@ img {
 .logo-footer {
   display: inline-block;
   margin-bottom: 16px;
+}
+
+.footer-social-title {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  margin-bottom: 16px;
+}
+
+.footer-center-content {
+  .social-list {
+    gap: 16px;
+  }
+  .social-list-link:hover,
+  .social-list-link:focus {
+    background-color: var(--green);
+  }
 }
 /* === /FOOTER STYLES === */
