[main]: Udate transform property selector.

--- a/css/styles.css
+++ b/css/styles.css
@@ -374,10 +374,10 @@ img {
 .portfolio-list-item:hover {
   cursor: pointer;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  
-  .portfolio-overlay {
-    transform: translateY(0%);
-  }
+}
+
+.portfolio-list-item:hover .portfolio-overlay {
+  transform: translateY(0%);
 }
 
 .portfolio-list-content {
